Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-17 (SVN):
    * utils, dhcc: added -dec cmdline switch, as an alternative to -dcc.

2012-07-16 (SVN):
    * cl_main.c (CL_Disconnect): set cl.intermission to 0. fixes a minor
      intermissions glitch which is almost impossible to hit in hexen2.
      See Baker's post: http://forums.inside3d.com/viewtopic.php?t=4944

2012-07-16 (SVN):
    * docs: minor update.

2012-07-16 (SVN):
    * utils, threads: Made numthreads static. Changed InitThreads(), so
      that the caller passes wanted number of threads and needed stack
      size. A negative required threads number will autodetect. Default
      without a -threads # command line option is single-threaded.
    * updated version date stamp to 2012-07-16.

2012-07-16 (SVN):
    * split maputils to four directories, qbsp, light, vis and bspinfo.

2012-07-14 (SVN):
    * utils (genmodel): better handling of command line switches.

2012-07-14 (SVN):
    * utils (dhcc, hcc, genmodel, jsh2color, light, qbsp, qfiles, vis):
      correctly handle command line options requiring additional args.

2012-07-14 (SVN):
    * utils, threads.c: added Thread_GetNumCPUS() based on a nice entry
      at stackoverflow.com. moved the MAX_THREADS macro to threads.h.

2012-07-14 (SVN):
    * utils, jsh2colour: removed excessive stdout prints. renamed the
      thread procedures. removed lightdatasize computation from the end
      of LightWorld(). Moved CloseDefFile() call before MakeLITFile().
    * utils, vis: removed some commented out code. renamed min variable
      to minsee in GetNextPortal().

2012-07-14 (SVN):
    * utils: cleaned up the threads mess. windows no longer needs to be
      __alpha for multi-threading. added pthread support for unix. added
      irix sprocsp support based on code from GtkRadiant. windows tls
      code in vis is removed. multi-threads are available for light, vis